# robot-ros

./: CMakeLists.txt  README.md  TECHNICAL_IMPLEMENTATION_STATUS.md  frames.gv  frames_2024-04-12_12.41.35.gv  package.xml  requirements.txt  run_robot_test.sh  setup.cfg  setup.py  test_arduino_teleop.sh
.github/workflows/: release.yml
bt/: navigation_tree.xml
config/: arduino_controllers.yaml  arduino_controllers_fixed.yaml  mapper.yaml  my_controllers.yaml
description/: README.md  camera.xacro  gazebo_control.xacro  robot.urdf.xacro  robot.urdf_rpi.xacro  robot_core.xacro  robot_core_rpi.xacro  ros2_control.xacro  ros2_control_rpi.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_ros/lib/robot_ros/: cmdVel_to_pwm_node  nav_behaviour_tree  talker
install/robot_ros/share/robot_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_ros/share/robot_ros/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/robot_ros/share/robot_ros/launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  my_script_launch.py  rsp.launch.py  test_mobile_robot_0.launch.py  test_mobile_robot_1.launch.py
install/robot_ros/share/robot_ros/worlds/: test_wold_1.world  walls.world
launch/: arduino_direct.launch.py  arduino_full_test.launch.py  arduino_persistent.launch.py  arduino_robot.launch.py  arduino_test_simple.launch.py  camera.launch.py  launch_robot.launch.py  launch_robot_cus.launch.py  rsp.launch.py  test_complete.launch.py  test_mobile_robot_0.launch.py  test_mobile_robot_1.launch.py
launch/launch/: lidar.launch.py  test_mobile_robot_0.launch.py  test_mobile_robot_1.launch.py
log/: latest_build
maps/: my_map_1.pgm  my_map_1.yaml
models/: basic_mobile_bot_v1.urdf  basic_mobile_bot_v2.urdf
models/robot-development/: model.config
robot_ros/: cmd_to_pwm_driver.py  motor_controller_custom.py  odom_publisher.py
robot_ros/hardware_interface/: arduino_hardware_interface.cpp  arduino_hardware_interface.hpp  arduino_hardware_interface.py  arduino_hardware_interface_complex.cpp.bak  arduino_hardware_interface_plugin.xml
rviz/: rviz_config.rviz
webserver/: index.html
worlds/: my_house_v1.world  my_house_v2.world  walls.world
