<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_ros</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lafacerosario@gmail.com">rosario</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 Control dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2_control</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/robot_ros/hardware_interface/arduino_hardware_interface_plugin.xml"/>
  </export>
</package>
